--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         <!--=============== FOOTER ===============-->
         <footer class="footer container">
             <span class="footer__copy">
-                &#169; Kastriot Krasniqi. All rigths reserved
+                &#169; Kastriot Krasniqi. All rights reserved
             </span>
         </footer>
 
