--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <!--=============== FAVICON ===============-->
         
-        
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
         <!--=============== REMIX ICONS ===============-->
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
